# subboard

./: .gitignore  README.md  board.py  pyproject.toml  requirements.txt  tester.py
subboard/: __init__.py  clock.py  display.py  events.py  match.py  mqtt.py  score.py  states.py
