[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SubBoard"
version = "0.0.1"
authors = [{ name = "ilmaruk", email = "author@example.com" }]
description = "A Subbuteo board application"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ilmaruk/subboard"
"Bug Tracker" = "https://github.com/ilmaruk/subboard/issues"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
